Add verify process

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:text="successful"
         android:id="@+id/confirmation_message"
+        android:visibility="gone"
         />
 
 </LinearLayout>
