--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/authenticate_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Authenticate"
-        android:id="@+id/authenticate_button"
-        />
+        android:layout_margin="50dp"
+        android:layout_gravity="center"
+        android:text="Authenticate" />
     
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="successful"
         android:id="@+id/confirmation_message"
+        android:layout_gravity="center"
         android:visibility="gone"
         />
 
